added unknown stimuli data and comments

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Sensors/Analysis/.idea/workspace.xml
 .idea/workspace.xml
 .idea/workspace.xml
+.idea/workspace.xml
+Sensors/Analysis/.idea/workspace.xml
